<resources>
    <string name="app_name">Isnt Instagram</string>
    <string name="btn_next">Siguiente</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_userName">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_rePassword">Repita contraseña</string>
    <string name="btn_sign_up">Iniciar sesión</string>
    <string name="btn_register">Registrarse</string>
    <string name="err_msg_email">Inserta un correo electrónico válido</string>
    <string name="err_msg_password">Inserta una contraseña válida</string>
    <string name="err_msg_rePassword">Las contraseñas no coinciden</string>
    <string name="topBarItem_tittle_search">Buscar...</string>
    <string name="topBarItem_msg_search">Buscar...</string>
    <string name="topBarItem_msg_searching">Buscando</string>
    <string name="topBarItem_msg_notResultSearch_">Ningún resultado para</string>
    <string name="request_permision_title">Permisos</string>
    <string name="request_permision_msg">Esta aplicaciòn requiere multiples permisos:</string>
    <string name="request_permision_btnGrant">Permitir</string>
    <string name="request_permision_goToGrant">Ir a configuración para conceder los permisos</string>
    <string name="request_permision_btnCancel">Cancelar</string>
    <string name="err_msg_login">El correo electrónico o la contraseña no coinciden</string>
    <string name="err_msg_email_used">Este correo ya esta en uso</string>
    <string name="err_register">Error registrando el usuario, por favor intentalo de nuevo</string>
    <string name="err_msg_username_shortlength">Su nombre debe incluir al menos 4 caracteres</string>
    <string name="err_msg_username_longlength">Su nombre de usuario es demasiado largo</string>
    <string name="err_msg_username_exist">Este nombre de usuario esta en uso</string>
    <string name="btn_add_photo">Añadir foto</string>
    <string name="btn_skip">Saltar</string>
    <string name="info_setPhot">Añade una foto de perfil</string>
    <string name="exit_register3">Su nueva cuenta necesita un nombre de usuario.¿Estás seguro de que quieres salir?</string>
    <string name="btn_exit">Salir</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="tv_addcomment">Añade un comentario...</string>
    <string name="tv_likes">Me Gusta</string>
    <string name="tv_comments">Comentarios</string>
    <string name="tv_datePost_front">Hace </string>
    <string name="tv_datePost_end_years"> años</string>
    <string name="tv_datePost_end_year"> año</string>
    <string name="tv_datePost_end_months"> meses</string>
    <string name="tv_datePost_end_month"> mes</string>
    <string name="tv_datePost_end_days"> dias</string>
    <string name="tv_datePost_end_day"> dia</string>
    <string name="tv_datePost_end_hours"> horas</string>
    <string name="tv_datePost_end_hour"> hora</string>
    <string name="tv_datePost_end_minutes"> minutos</string>
    <string name="tv_datePost_end_minute"> minuto</string>
    <string name="tv_datePost_end_seconds"> segundos</string>
    <string name="tv_datePost_end_years_comment"> años</string>
    <string name="tv_datePost_end_year_comment"> año</string>
    <string name="tv_datePost_end_months_comment"> meses</string>
    <string name="tv_datePost_end_month_comment"> mes</string>
    <string name="tv_datePost_end_days_comment"> d</string>
    <string name="tv_datePost_end_hours_comment"> h</string>
    <string name="tv_datePost_end_minutes_comment"> min</string>
    <string name="tv_datePost_end_seconds_comment"> sec</string>
    <string name="tv_post">Publicaciones</string>
    <string name="tv_followers">Seguidores</string>
    <string name="tv_following">Siguiendo</string>
    <string name="tv_editProfile">Editar perfil</string>
    <string name="tv_info_name">"@Configure sus datos" </string>
    <string name="btn_following">Siguiendo</string>
    <string name="btn_follow">Seguir</string>
    <string name="btn_followBack">Seguir también</string>
    <string name="btn_log_out">Cerrar sesión</string>
    <string name="et_bio">Presentación</string>
    <string name="et_name">Nombre</string>
    <string name="edit_ProfileImage">Cambia tu foto de perfil</string>
    <string name="btn_accept">Aceptar</string>
    <string name="err_uploadinImage">Ha ocurrido un error al subir tu foto, por favor intentelo mas tarde</string>
    <string name="btn_post">Publicar</string>
    <string name="hint_tv_post">Escribe el pie del post...</string>
    <string name="tv_uploading">Subiendo publicacion...</string>
    <string name="tv_new_user">Nuevos usuarios</string>
    <string name="alert_delete_post">¿Estas seguro de que quieres borrar esta publicación?</string>
    <string name="alert">¡Cuidado!</string>
    <string name="tv_reply">Responder</string>
    <string name="tv_like">Me gusta</string>
    <string name="tv_front_show_replies">──    Ver</string>
    <string name="tv_end_show_replies">respuestas</string>
    <string name="tv_front_show_previous_replies">──    Ver </string>
    <string name="tv_end_show_previous_replies">respuestas anteriores </string>
    <string name="tv_loading_replies">──    Cargando...</string>
    <string name="hint_add_comment">Añadir un comentario...</string>
    <string name="tv_to_post">Publicar</string>
    <string name="tv_reply_to">Respondiendo a</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
